feat: add responsive for screen in between 375px and 768px

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +7,10 @@
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="assets/fonts/stylesheet.css">
 </head>
-
 <body>
+	<div class="head-content-burger">
+		<img src="assets/burger.png" alt="burger menu">
+	</div>
 	<header class="head">
 		<div class="head-content block">
 			<div class="head-content-logo">
@@ -225,7 +226,7 @@
 					<input type="text" name="form-subject" placeholder="Subject"><br>
 					<textarea cols="30" rows="12" name="form-message"
 						placeholder="Describe your project in detail..."></textarea>
-					<button type="submit">Submit</button>
+					<button type="submit">Send</button>
 				</form>
 				<section class="contact">
 					<h3>Contact Information</h3>
@@ -244,6 +245,7 @@
 	</div>
 	<footer class="footer-wrapper">
 		<div class="footer block">
+			<div class="copyright">© Copyright 2013 · by PSDchat.com</div>
 			<div class="social">
 				<span></span>
 				<span></span>
@@ -263,7 +265,23 @@
 			<p class="modal-hide">OK</p>
 		</div>
 	</div>
+	<div class="sidebar-wrapper">
+		<div class="sidebar">
+			<div class="head-content-logo">
+				<h1>SINGOLO</h1>
+				<span>*</span>
+			</div>
+			<nav>
+				<ul>
+					<li><a href="#home">HOME</a></li>
+					<li><a href="#services">SERVICES</a></li>
+					<li><a href="#portfolio">PORTFOLIO</a></li>
+					<li><a href="#about-us">ABOUT</a></li>
+					<li><a href="#contact">CONTACT</a></li>
+				</ul>
+			</nav>
+		</div>
+	</div>
 	<script src="script.js"></script>
 </body>
-
 </html>
