feat: add sidebar for screens between 375px and 768px

--- a/index.html
+++ b/index.html
@@ -267,17 +267,17 @@
 	</div>
 	<div class="sidebar-wrapper">
 		<div class="sidebar">
-			<div class="head-content-logo">
+			<div class="head-content-logo sidebar-content-logo">
 				<h1>SINGOLO</h1>
 				<span>*</span>
 			</div>
-			<nav>
+			<nav class="sidebar-menu">
 				<ul>
-					<li><a href="#home">HOME</a></li>
-					<li><a href="#services">SERVICES</a></li>
-					<li><a href="#portfolio">PORTFOLIO</a></li>
-					<li><a href="#about-us">ABOUT</a></li>
-					<li><a href="#contact">CONTACT</a></li>
+					<li><a class="sidebar-menu__url sidebar-menu__url_selected" href="#home">HOME</a></li>
+					<li><a class="sidebar-menu__url" href="#services">SERVICES</a></li>
+					<li><a class="sidebar-menu__url" href="#portfolio">PORTFOLIO</a></li>
+					<li><a class="sidebar-menu__url" href="#about-us">ABOUT</a></li>
+					<li><a class="sidebar-menu__url" href="#contact">CONTACT</a></li>
 				</ul>
 			</nav>
 		</div>
